# shader_playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  build.bat  cl-build.bat  imgui.ini  newFile.txt  plats.shader_playground  shader_playground.10x
cmake_files/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  shader_playground.sln  shader_playground.vcxproj  shader_playground.vcxproj.filters
cmake_files/shader_playground.dir/Debug/: shader_playground.exe.recipe  shader_playground.ilk
cmake_files/shader_playground.dir/Debug/shader_p.D4030057.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake_files/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
cmake_files/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
cmake_files/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
cmake_files/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
examples/: Fractal Tree.shader_playground  Truchet donut.shader_playground
projects/: CineShader Lava.shader_playground  Fractal Tree.shader_playground  Happy Jumping.shader_playground  Ocean.shader_playground  Protean clouds.shader_playground  Truchet donut.shader_playground  cool light.shader_playground  imgui.ini  octagrams.shader_playground  plants.shader_playground
src/: application.cpp  application.h  core.h  editor_window.cpp  editor_window.h  file_system.cpp  file_system.h  logger.h  main.cpp  unity_build.cpp  viewport_window.cpp  viewport_window.h  window.cpp  window.h
src/ImGui/: spg_imgui.cpp  spg_imgui.h
src/math/: spg_maths.h
src/platform/win32/: win32_file_system.cpp  win32_file_system.h  win32_imgui.cpp  win32_window.cpp  win32_window.h
src/platform/win32/opengl/: win32_renderer_backend.cpp  win32_renderer_backend.h
src/renderer/: buffer.cpp  buffer.h  framebuffer.cpp  framebuffer.h  render_command.cpp  render_command.h  renderer_api.cpp  renderer_api.h  renderer_backend.cpp  renderer_backend.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
src/renderer/opengl/: opengl_buffer.cpp  opengl_buffer.h  opengl_framebuffer.cpp  opengl_framebuffer.h  opengl_headers.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_vertex_array.cpp  opengl_vertex_array.h
